[gd_scene load_steps=17 format=3 uid="uid://d1a4px4hdm364"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_lvw8j"]
[ext_resource type="PackedScene" uid="uid://d0dh7cs6k8iye" path="res://assets/models/character.glb" id="2_uxk3n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7a6ce"]

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_bs1rq"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_h2h40"]
xfade_time = 0.2
input_0/name = "fall"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "jump"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "fall forward"
input_2/auto_advance = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ujb3l"]
animation = &"Falling in the air Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rck60"]
animation = &"Falling mid-air idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5xirp"]
animation = &"Happy Idle"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_2jcyi"]
xfade_time = 0.2
input_0/name = "false"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "true"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yff7v"]
animation = &"jumping short"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_tkha8"]
xfade_time = 0.2
input_0/name = "idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "walk"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "punch"
input_2/auto_advance = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k48bq"]
animation = &"Jab Punch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8xmey"]
animation = &"happy walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_is7s2"]
graph_offset = Vector2(-809.099, -68.3098)
nodes/TimeSeek/node = SubResource("AnimationNodeTimeSeek_bs1rq")
nodes/TimeSeek/position = Vector2(-128, 448)
"nodes/air movements/node" = SubResource("AnimationNodeTransition_h2h40")
"nodes/air movements/position" = Vector2(80, 304)
nodes/fall/node = SubResource("AnimationNodeAnimation_rck60")
nodes/fall/position = Vector2(-208, 336)
"nodes/fall forward/node" = SubResource("AnimationNodeAnimation_ujb3l")
"nodes/fall forward/position" = Vector2(-112, 576)
nodes/idle/node = SubResource("AnimationNodeAnimation_5xirp")
nodes/idle/position = Vector2(-352, -64)
nodes/in_air/node = SubResource("AnimationNodeTransition_2jcyi")
nodes/in_air/position = Vector2(272, 144)
nodes/jump/node = SubResource("AnimationNodeAnimation_yff7v")
nodes/jump/position = Vector2(-304, 480)
nodes/movements/node = SubResource("AnimationNodeTransition_tkha8")
nodes/movements/position = Vector2(-32, 80)
nodes/output/position = Vector2(464, 144)
nodes/punch/node = SubResource("AnimationNodeAnimation_k48bq")
nodes/punch/position = Vector2(-592, 256)
nodes/walk/node = SubResource("AnimationNodeAnimation_8xmey")
nodes/walk/position = Vector2(-464, 48)
node_connections = [&"output", 0, &"in_air", &"TimeSeek", 0, &"jump", &"air movements", 0, &"fall", &"air movements", 1, &"TimeSeek", &"air movements", 2, &"fall forward", &"in_air", 0, &"movements", &"in_air", 1, &"air movements", &"movements", 0, &"idle", &"movements", 1, &"walk", &"movements", 2, &"punch"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v2qcl"]
height = 0.39656
radius = 0.50087

[sub_resource type="SphereShape3D" id="SphereShape3D_4y2pm"]
radius = 1.13903

[node name="player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 3
script = ExtResource("1_lvw8j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_7a6ce")

[node name="visuals" type="Node3D" parent="."]

[node name="character" parent="visuals" instance=ExtResource("2_uxk3n")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="visuals/character/character armature" index="0"]
bones/0/position = Vector3(-0.00186856, 0.279916, 0.00915502)
bones/0/rotation = Quaternion(-0.0117233, -0.00615568, -0.0153131, 0.999795)
bones/1/rotation = Quaternion(-0.0401855, -0.0100108, -0.0169739, 0.998998)
bones/2/rotation = Quaternion(-0.0807473, -0.0434553, -0.0948281, 0.991261)
bones/9/rotation = Quaternion(0.657418, 0.261077, -0.653126, 0.270311)
bones/10/rotation = Quaternion(-0.0133832, 0.562153, 0.0306527, 0.826357)
bones/11/rotation = Quaternion(-0.012552, -0.0803123, 0.387611, 0.918232)
bones/12/rotation = Quaternion(-0.0683668, -0.206628, 0.0251315, 0.975704)
bones/13/rotation = Quaternion(0.00937673, 0.117277, 0.270921, 0.955385)
bones/14/rotation = Quaternion(0.173721, 0.0645637, -0.0959752, 0.977978)
bones/15/rotation = Quaternion(0.181172, -0.0277881, 0.0282657, 0.982652)
bones/18/rotation = Quaternion(-0.411301, -0.563586, 0.332706, 0.634436)
bones/19/rotation = Quaternion(0.000160102, 1.89769e-07, -2.45981e-08, 1)
bones/20/rotation = Quaternion(0.635787, -0.309024, 0.632204, 0.317171)
bones/21/rotation = Quaternion(0.218246, -0.12476, 0.164475, 0.953809)
bones/22/rotation = Quaternion(-0.00812097, 0.0519575, -0.250763, 0.966619)
bones/23/rotation = Quaternion(-0.0116232, -0.00907437, -0.162477, 0.986602)
bones/24/rotation = Quaternion(0.0795224, -0.111618, -0.279796, 0.950227)
bones/25/rotation = Quaternion(0.128239, -0.0929767, 0.144347, 0.976767)
bones/26/rotation = Quaternion(0.120778, 0.0272476, -0.050016, 0.991044)
bones/29/rotation = Quaternion(-0.236773, 0.665143, -0.270016, 0.654687)
bones/30/rotation = Quaternion(0.000160313, -1.91568e-07, -3.40199e-09, 1)
bones/32/rotation = Quaternion(0.0555761, 0.222344, 0.964099, -0.134122)
bones/33/rotation = Quaternion(-0.54326, -0.00203878, 0.0371225, 0.838741)
bones/34/rotation = Quaternion(0.57388, -0.00367664, -0.149625, 0.805146)
bones/35/rotation = Quaternion(0.46889, 0.0113136, 0.00362426, 0.883177)
bones/38/rotation = Quaternion(0.0555761, 0.222344, 0.964099, -0.134122)
bones/39/rotation = Quaternion(-0.54326, -0.00203875, 0.0371226, 0.838741)
bones/40/rotation = Quaternion(-0.163778, 0.0562038, 0.950695, 0.257286)
bones/41/rotation = Quaternion(-0.284233, 0.0560396, -0.0212964, 0.956879)
bones/42/rotation = Quaternion(0.388945, -0.0452355, 0.280609, 0.876319)
bones/43/rotation = Quaternion(0.497216, -0.000381482, 0.000119585, 0.867627)
bones/46/rotation = Quaternion(-0.163778, 0.0562038, 0.950695, 0.257286)
bones/47/rotation = Quaternion(-0.284234, 0.0560395, -0.0212964, 0.956879)
bones/49/position = Vector3(0.180661, 0.132007, -0.00212794)
bones/49/rotation = Quaternion(0.0896823, 0.28725, 0.953533, -0.0148104)
bones/51/position = Vector3(0.222348, 0.564133, 0.803362)
bones/53/position = Vector3(-0.232957, 0.136693, -0.037027)
bones/53/rotation = Quaternion(-0.183754, 0.257882, 0.947237, 0.0497401)
bones/55/position = Vector3(-0.341622, 0.553581, 0.770909)

[node name="eye_L" parent="visuals/character/character armature/Skeleton3D" index="0"]
transform = Transform3D(0.960854, 0.263016, -0.0870767, -0.230663, 0.933525, 0.274456, 0.153474, -0.243626, 0.957649, 0.208687, 1.19845, 0.28067)
bone_idx = 4

[node name="eye_R" parent="visuals/character/character armature/Skeleton3D" index="1"]
transform = Transform3D(-0.960854, 0.263016, -0.0870767, 0.230663, 0.933525, 0.274456, -0.153474, -0.243626, 0.957649, -0.0722953, 1.2659, 0.23579)
bone_idx = 6

[node name="hat tricorne" parent="visuals/character/character armature/Skeleton3D" index="2"]
transform = Transform3D(0.960854, 0.273517, -0.044135, -0.230663, 0.877989, 0.419441, 0.153474, -0.392841, 0.906709, 0.220424, 1.55967, -0.202618)
bone_idx = 7

[node name="head" parent="visuals/character/character armature/Skeleton3D" index="3"]
transform = Transform3D(0.960854, 0.263016, -0.0870767, -0.230663, 0.933525, 0.274455, 0.153474, -0.243626, 0.957649, 0.110272, 1.20285, -0.0492807)
bone_idx = 8

[node name="forearm_L" parent="visuals/character/character armature/Skeleton3D" index="4"]
transform = Transform3D(-0.0620762, 0.348797, -0.93514, -0.862865, 0.452133, 0.225919, 0.501608, 0.820924, 0.272898, 0.353969, 0.43093, 0.0507113)
bone_idx = 16

[node name="arm_L" parent="visuals/character/character armature/Skeleton3D" index="5"]
transform = Transform3D(0.63652, 0.198062, -0.745395, -0.746931, 0.399137, -0.531774, 0.192191, 0.895243, 0.401997, 0.296154, 0.617573, -0.0192118)
bone_idx = 17

[node name="forearm_R" parent="visuals/character/character armature/Skeleton3D" index="6"]
transform = Transform3D(-0.513257, -0.851977, 0.10345, -0.831039, 0.523473, 0.188016, 0.214338, -0.0105295, 0.976702, -0.339728, 0.459319, -0.0929552)
bone_idx = 27

[node name="arm_R" parent="visuals/character/character armature/Skeleton3D" index="7"]
transform = Transform3D(-0.507792, -0.859335, -0.0607501, -0.812869, 0.501299, -0.296553, -0.285293, 0.101205, 0.953082, -0.236998, 0.643065, -0.0863047)
bone_idx = 28

[node name="chest" parent="visuals/character/character armature/Skeleton3D" index="8"]
transform = Transform3D(0.997405, 0.066302, -0.0280554, -0.0630316, 0.992506, 0.104687, 0.0347862, -0.102647, 0.994109, 0.0150445, 0.691806, -0.022375)
bone_idx = 31

[node name="leg_L" parent="visuals/character/character armature/Skeleton3D" index="9"]
transform = Transform3D(0.949477, -0.152685, 0.274192, 0.272806, 0.833443, -0.480572, -0.155147, 0.531093, 0.832988, 0.176126, 0.164015, 0.018025)
bone_idx = 36

[node name="hip_L" parent="visuals/character/character armature/Skeleton3D" index="10"]
transform = Transform3D(0.966512, -0.25085, 0.0541079, 0.200595, 0.870022, 0.45036, -0.160048, -0.424425, 0.891206, 0.158535, 0.248495, 0.0317086)
bone_idx = 37

[node name="leg_R" parent="visuals/character/character armature/Skeleton3D" index="11"]
transform = Transform3D(-0.7231, 0.378288, -0.577949, 0.523932, 0.845628, -0.102023, -0.450136, 0.376578, 0.809671, -0.219596, 0.169539, -0.0232164)
bone_idx = 44

[node name="hip_R" parent="visuals/character/character armature/Skeleton3D" index="12"]
transform = Transform3D(-0.794968, 0.52985, -0.29544, 0.487206, 0.847791, 0.209478, -0.361463, -0.0225882, 0.932112, -0.176724, 0.260358, 0.00167797)
bone_idx = 45

[node name="belly" parent="visuals/character/character armature/Skeleton3D" index="13"]
transform = Transform3D(0.999455, 0.0307653, -0.0119498, -0.0304767, 0.999256, 0.0236302, 0.0126679, -0.0232532, 0.999649, 0.00185779, 0.404762, 0.0155152)
bone_idx = 48

[node name="AnimationTree" type="AnimationTree" parent="visuals/character"]
tree_root = SubResource("AnimationNodeBlendTree_is7s2")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/TimeSeek/seek_request = 0.5
"parameters/air movements/current_state" = ""
"parameters/air movements/transition_request" = "fall"
"parameters/air movements/current_index" = -1
parameters/in_air/current_state = "false"
parameters/in_air/transition_request = ""
parameters/in_air/current_index = 0
parameters/movements/current_state = "idle"
parameters/movements/transition_request = ""
parameters/movements/current_index = 0

[node name="camera_mount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.847358, 0)

[node name="Camera3D" type="Camera3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 0.86523, 0.501375, 0, -0.501375, 0.86523, 0, 2.05527, 2.20653)

[node name="drop_item_range" type="Node3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.757902, -1.76318)

[node name="attack" type="Area3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.847358, 0)
collision_layer = 0
collision_mask = 2

[node name="attack_range" type="CollisionShape3D" parent="camera_mount/attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0049845, 0.726712, -0.552548)
shape = SubResource("CylinderShape3D_v2qcl")
disabled = true

[node name="interaction_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_layer = 4
collision_mask = 4

[node name="interaction_range" type="CollisionShape3D" parent="interaction_area"]
shape = SubResource("SphereShape3D_4y2pm")

[connection signal="animation_finished" from="visuals/character/AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_shape_entered" from="camera_mount/attack" to="." method="_on_attack_area_shape_entered"]
[connection signal="body_entered" from="camera_mount/attack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="interaction_area" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interaction_area" to="." method="_on_interaction_area_body_exited"]

[editable path="visuals/character"]
